--- a/index.html
+++ b/index.html
@@ -1,11 +1,51 @@
 <!doctype html>
   <head>
-    <title>My blog</title>
+    <title>Jazz Piano Lessons, Auckland, New Zealand</title>
     <link href="styles/main.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=350, initial-scale=1" />
+
+
   </head>  
   <body>
-    <h1>Kia ora Taiao! (Hello World!)</h1> 
-    <p id="firstid"> This is the beginning of my website home page.</p>
-    <p class="firstclass"> It will eventually contain a list of links to all my blogs. </p>
+    <div class="nav">
+      <div class="header">
+        <span class="jazzpiano">Jazzpiano.co.nz</span>
+        <div class="right-items">
+          <span id="welcome">Welcome</span>
+          <span class="learn">Learn</span>
+          <span class="discography">Discography</span>
+          <span class="recent-work"><a href="blog/te-houtaewa-template.html">Recent Work</a></span>
+          <span class="testimonials">Testimonials</span>
+          <span class="contact">Contact</span>
+        </div>
+      </div>
+    </div>
+    <div class="specialising">Specialising in Jazz and Popular Music</div>
+    <div class="welcome-header">Welcome</div>
+  <div class="content">
+    <div class="background-image">
+    <p> Welcome to JazzPiano.co.nz, a platform where you can learn jazz piano from a seasoned pianist with a contemporary flair. My name is Dr. Mark Baynes, and I am based in West Auckland, New Zealand. I have a strong background in jazz and popular music performance as a performer, composer, accompanist, teacher, and mentor.</p>
+    <p>
+      My teaching style is fun yet focused, aimed at helping students enjoy learning the piano, build skills and confidence, and develop a solid repertoire. I teach all ages and abilities from my home studio in West Auckland, and I offer lessons in:
+    </p>
+    <ul class="indented-list">
+      <li>reading and technique</li>
+      <li>improvisation (beginners to advanced)</li>
+      <li>styles (Funk, Jazz, Latin, Pop, etc.)</li>
+      <li>composition and songwriting</li>
+      <li>music theory</li>
+      <li>music production</li>
+    </ul>
+    <p>
+      In my extensive experience in the music industry, I have collaborated with acclaimed artists like Troy Kingi, Latin Grammy Award Winner Mireya Ramos, the Royal New Zealand Ballet, and the Auckland Philharmonia Orchestra. I have also worked as a musical director in the Middle East and as a pianist/MD for ProShip (Canada), and have performed alongside jazz giants such as Eric Marienthal.
+    </p>
+    <p>As a presenter of 95bFM’s The Jazz Show and a columnist for NZ Musician Magazine, I stay up-to-date with the latest trends in jazz and popular music. I am also involved in curriculum development and have sat on the NZQA panel tasked with reviewing unit standards for music technology L1-3. I run Networks of Expertise workshops teaching popular music analysis to secondary school teachers and review achievement standards at secondary school level at NCEA levels 1-3 on the Music Subject Experts Group.</p>
+    <p>On this website, you’ll find a wealth of resources to help you learn jazz piano, including a special focus on the music of Brad Mehldau. Whether you’re just starting out or you’re an experienced player, I can provide you with the guidance and tools you need to build your skills and deepen your understanding of music.</p>
+    <p>I invite you to join me on this journey of musical discovery.<br><br>
+    Dr Mark Baynes</p>
+    </div>
+  </div>
+  <div class="footer">Powered by strong coffee and obsession. for the live version of this blog visit <a href="https://www.jazzpiano.co.nz" target="_blank">www.jazzpiano.co.nz</a></div>
   </body>
 </html>
