--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <span class="jazzpiano">Jazzpiano.co.nz</span>
         <div class="right-items">
           <span id="welcome">Welcome</span>
-          <span class="learn">Learn</span>
+          <span class="html-css"><a href="blog/html-css.html">Html-css</a></span>
           <span class="discography">Discography</span>
-          <span class="recent-work"><a href="blog/te-houtaewa-template.html">Recent Work</a></span>
+          <span class="blog"><a href="blog/te-houtaewa-template.html">Blog</a></span>
           <span class="testimonials">Testimonials</span>
           <span class="contact">Contact</span>
         </div>
