tidied up blog entries and added javascript button

--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
         <span class="jazzpiano">Jazzpiano.co.nz</span>
         <div class="right-items">
           <span id="welcome">Welcome</span>
-          <span class="html-css"><a href="blog/html-css.html">Html-css</a></span>
-          <span class="discography">Discography</span>
-          <span class="blog"><a href="blog/te-houtaewa-template.html">Blog</a></span>
-          <span class="testimonials">Testimonials</span>
-          <span class="contact">Contact</span>
+          <span class="html-css"><a href="blog/html-css.html">html-css</a></span>
+          <span class="javascript-dom"><a href="blog/javascript-dom.html">javascript-dom</a></span>
+          <span class="learning-plan"><a href="blog/learning-plan.html">learning-plan</a></span>
+          <span class="identity-values"><a href="blog/identity-values.html">identity-values</a></span>
         </div>
       </div>
     </div>
@@ -47,5 +46,7 @@
     </div>
   </div>
   <div class="footer">Powered by strong coffee and obsession. for the live version of this blog visit <a href="https://www.jazzpiano.co.nz" target="_blank">www.jazzpiano.co.nz</a></div>
+    <button class="button" id="backHomeButton">Back Home (javascript button)</button>
+    <script src="../javascript.js"></script>
   </body>
 </html>
