complete blog entries

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
           <span class="javascript-dom"><a href="blog/javascript-dom.html">javascript-dom</a></span>
           <span class="learning-plan"><a href="blog/learning-plan.html">learning-plan</a></span>
           <span class="identity-values"><a href="blog/identity-values.html">identity-values</a></span>
+          <span class="emotional-intelligence"><a href="blog/emotional-intelligence.html">emotional-intelligence</a></span>
+          <span class="problem-solving"><a href="blog/problem-solving.html">problem-solving</a></span>
+          <span class="neuroplasticity"><a href="blog/neuroplasticity.html">neuroplasticity</a></span>
+          <span class="nte-whare-tapa-wha"><a href="blog/te-whare-tapa-wha.html">te-whare-tapa-wha</a></span>
         </div>
       </div>
     </div>
