--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <span class="problem-solving"><a href="blog/problem-solving.html">problem-solving</a></span>
           <span class="neuroplasticity"><a href="blog/neuroplasticity.html">neuroplasticity</a></span>
           <span class="nte-whare-tapa-wha"><a href="blog/te-whare-tapa-wha.html">te-whare-tapa-wha</a></span>
+          <span class="foundations-reflections"><a href="blog/foundations-reflections.html">foundations-reflections</a></span>
         </div>
       </div>
     </div>
