add games to blog

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
   <head>
-    <title>Jazz Piano Lessons, Auckland, New Zealand</title>
+    <title>My blog - tracking the dev academy journey</title>
     <link href="styles/main.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=350, initial-scale=1" />
@@ -10,7 +10,7 @@
   <body>
     <div class="nav">
       <div class="header">
-        <span class="jazzpiano">Jazzpiano.co.nz</span>
+        <span class="jazzpiano">Mark's Dev Academy Blog</span>
         <div class="right-items">
           <span id="welcome">Welcome</span>
           <span class="html-css"><a href="blog/html-css.html">html-css</a></span>
@@ -21,18 +21,23 @@
           <span class="problem-solving"><a href="blog/problem-solving.html">problem-solving</a></span>
           <span class="neuroplasticity"><a href="blog/neuroplasticity.html">neuroplasticity</a></span>
           <span class="nte-whare-tapa-wha"><a href="blog/te-whare-tapa-wha.html">te-whare-tapa-wha</a></span>
-          <span class="foundations-reflections"><a href="blog/foundations-reflections.html">foundations-reflections</a></span>
         </div>
       </div>
     </div>
-    <div class="specialising">Specialising in Jazz and Popular Music</div>
+    <div class="specialising">My blog - tracking the dev academy journey</div>
     <div class="welcome-header">Welcome</div>
   <div class="content">
     <div class="background-image">
-    <p> Welcome to JazzPiano.co.nz, a platform where you can learn jazz piano from a seasoned pianist with a contemporary flair. My name is Dr. Mark Baynes, and I am based in West Auckland, New Zealand. I have a strong background in jazz and popular music performance as a performer, composer, accompanist, teacher, and mentor.</p>
+    <p>My reflection on foundations and my coded games are below: </p>
     <p>
-      My teaching style is fun yet focused, aimed at helping students enjoy learning the piano, build skills and confidence, and develop a solid repertoire. I teach all ages and abilities from my home studio in West Auckland, and I offer lessons in:
-    </p>
+<ul class="indented-list">
+       <li><a href="blog/foundations-reflections.html">foundations-reflections</a></li>
+          <li><a href="https://www.jazzpiano.co.nz/ttt/">tic-tac-toe</a></li>
+          <li><a href="https://www.jazzpiano.co.nz/unicorn/">unicorn game</a></li>
+          <li><a href="https://www.jazzpiano.co.nz/whack/">whack-a-mole</a></li>
+          <li><a href="https://www.jazzpiano.co.nz/clown/">dress-the-clown</a></li></ul>
+          </p>
+    
     <ul class="indented-list">
       <li>reading and technique</li>
       <li>improvisation (beginners to advanced)</li>
